--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,31 +1,64 @@
-.logo 
-{
-    display: flex;
-    justify-content: center;
-    
-}
 html
 {
-    background: url(../images/background.png), no-repeat center center fixed;
+    background: url(../images/background.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: "Batman";
+}
+.text
+{
+    gap: 15px;
+    display: flex;
+    justify-content: center;
+    margin-top: 25vh;
 }
 p
 {
-    display: inline;
-    font-size: 60px;
-    font-family: "Poppins";
-    color: white;
-    border-radius: 15px;
-    background-color: rgba(8, 41, 102, 0.603);
-    
-}
-.text 
-{
     display: flex;
-    gap: 25px;
-    align-content: center;
+    color: white;
+    font-size: 50px;
+    flex-direction: row;
+}
+img
+{
+    width: 900px;
+}
+.logo
+{
+    padding-top: 50px;
+    display: flex;
     justify-content: center;
+}
+@font-face {
+    font-family: "Batman";
+    src: url(../fonts/batman.ttf);
+}
+@media screen and (max-width:600px) {
+    img
+    {
+        width: 350px;
+    }
+    p
+    {
+        font-size: 25px;
+    }
+    .text
+    {
+        margin-top: 100px;
+        margin-left: 25vw;
+        flex-direction:column;
+    }
+}
+@media screen and (max-width:950px)
+{
+    img
+    {
+        width: 400px;
+    }
+    p
+    {
+        font-size: 25px;
+    }
 }
