--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -40,7 +40,6 @@ body
     color: white;
     font-size: 50px;
     font-family: 'Josefin Sans', sans-serif;
-    transform: translate(-3%);
     text-shadow: 
       -0.2vw 0.4vw 0px #065187, 
       -0.3vw 0.5vw 0px #043050
@@ -57,4 +56,8 @@ body
     justify-content: center;
     font-size: 25px;
     color: gray;
+}
+
+@media screen and {
+    
 }
